--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {%- seo -%}
+    {%- comment -%}Duplicated in `custom-post.html`{%- endcomment -%}
+    {% if page.collection == 'posts' -%}
+        {%- capture custom_title -%}
+            {{ site.title | remove: '?' }} {{ page.title }}?
+        {%- endcapture -%}
+        <title>{{ custom_title }}</title>
+        {% seo title=false -%}
+    {%- else -%}
+        {%- seo -%}
+    {%- endif -%}
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
     {%- feed_meta -%}
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
