Inlined the posts on the home page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {%- comment -%}Duplicated in `custom-post.html`{%- endcomment -%}
+    {%- comment -%}Duplicated in `home.html`{%- endcomment -%}
     {% if page.collection == 'posts' -%}
         {%- capture custom_title -%}
             {{ site.title | remove: '?' }} {{ page.title }}?
