--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,20 +9,12 @@ layout: base
 
     {{ content }}
 
-
-    {% if site.paginate %}
-        {% assign posts = paginator.posts %}
-    {% else %}
-        {% assign posts = site.posts %}
-    {% endif %}
-
-
-    {%- if posts.size > 0 -%}
+    {%- if site.posts.size > 0 -%}
         {%- if page.list_title -%}
             <h2 class="post-list-heading">{{ page.list_title }}</h2>
         {%- endif -%}
         <ul class="post-list">
-            {%- assign sorted_posts = posts | sort: 'title' -%}
+            {%- assign sorted_posts = site.posts | sort: 'title' -%}
             {%- for post in sorted_posts -%}
             <li>
                 <h3>
@@ -42,24 +34,5 @@ layout: base
             </li>
             {%- endfor -%}
         </ul>
-
-        {% if site.paginate %}
-            <div class="pager">
-                <ul class="pagination">
-                {%- if paginator.previous_page %}
-                    <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page }}</a></li>
-                {%- else %}
-                    <li><div class="pager-edge">•</div></li>
-                {%- endif %}
-                    <li><div class="current-page">{{ paginator.page }}</div></li>
-                {%- if paginator.next_page %}
-                    <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{ paginator.next_page }}</a></li>
-                {%- else %}
-                    <li><div class="pager-edge">•</div></li>
-                {%- endif %}
-                </ul>
-            </div>
-        {%- endif %}
-
     {%- endif -%}
 </div>
