Added spoiler reveal on entire post hover

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@ layout: base
                     {%- endcapture -%}
 
                     <a id="{{ post.title }}" class="post-link" href="#{{ post.title }}">{{ post.title }}</a>
-                    <span>
+                    <span class="spoiler-trigger">
                         {{ custom_title }} <span class="spoiler">{{ post.answer | capitalize }}!</span>
                     </span>
                 </h3>
