--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -3,7 +3,7 @@
     background-color: black;
 }
 
-.spoiler:hover {
+.spoiler-trigger:hover > .spoiler {
     color: inherit;
     background-color: inherit;
 }
