Animated the spoiler revealing and concealing

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,6 +1,7 @@
 .spoiler {
     color: transparent;
     background-color: black;
+    transition-duration: 300ms;
 }
 
 .spoiler-trigger:hover > .spoiler {
