--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,8 +10,19 @@ layout: base
     {{ content }}
 
     {%- if site.posts.size > 0 -%}
+        {%- assign sorted_posts = site.posts | sort: 'title' -%}
+
+        <ul>
+            {%- for post in sorted_posts -%}
+            <li>
+                <a href="#{{ post.title }}">{{ post.title }}</a>
+            </li>
+            {%- endfor -%}
+        </ul>
+
+        <hr>
+
         <ul class="post-list">
-            {%- assign sorted_posts = site.posts | sort: 'title' -%}
             {%- for post in sorted_posts -%}
             <li>
                 <h3>
