Replaced duplicated post title links with link emojis

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: base
                         {{ site.title | remove: '?' }} {{ post.title }}?
                     {%- endcapture -%}
 
-                    <a id="{{ post.title }}" class="post-link" href="#{{ post.title }}">{{ post.title }}</a>
+                    <a id="{{ post.title }}" class="post-link" style="display: inline-block" href="#{{ post.title }}">🔗</a>
                     <span class="spoiler-trigger">
                         {{ custom_title }} <span class="spoiler">{{ post.answer | capitalize }}!</span>
                     </span>
