Fixed missing content of posts in the RSS feed

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,7 @@ layout: base
                         {% octicon link height:16 fill:var(--minima-text-color) %}
                     </a>
                     <span class="spoiler-trigger">
-                        {{ custom_title }} <span class="spoiler">{{ post.answer | capitalize }}!</span>
+                        {{ custom_title }} <span class="spoiler">{{ post.content }}</span>
                     </span>
                 </h3>
             </li>
