--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,15 +26,11 @@ layout: base
             {%- for post in sorted_posts -%}
             <li>
                 <h3>
-                    {%- capture custom_title -%}
-                        {{ site.title | remove: '?' }} {{ post.title }}?
-                    {%- endcapture -%}
-
                     <a id="{{ post.title }}" class="post-link" style="display: inline-block" href="#{{ post.title }}">
                         {% octicon link height:16 fill:var(--minima-text-color) %}
                     </a>
                     <span class="spoiler-trigger">
-                        {{ custom_title }} <span class="spoiler">{{ post.content }}</span>
+                        {{ post.title | questionify: site.title }} <span class="spoiler">{{ post.content }}</span>
                     </span>
                 </h3>
             </li>
