Refactor: Moved inline style to the SCSS file

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: base
             {%- for post in sorted_posts -%}
             <li>
                 <h3>
-                    <a id="{{ post.title }}" class="post-link" style="display: inline-block" href="#{{ post.title }}">
+                    <a id="{{ post.title }}" class="post-link permalink" href="#{{ post.title }}">
                         {% octicon link height:16 fill:var(--minima-text-color) %}
                     </a>
                     <span class="spoiler-trigger">
