--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: base
     {{ content }}
 
     {%- if site.posts.size > 0 -%}
-        {%- assign sorted_posts = site.posts | sort: 'title' -%}
+        {%- assign sorted_posts = site.posts | sort_natural: 'title' -%}
 
         <ul>
             {%- for post in sorted_posts -%}
