--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,2 +1,12 @@
 
 {% tag_feeds_meta %}
+
+<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicon/apple-touch-icon.png?v=2' | relative_url }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/favicon/favicon-32x32.png?v=2' | relative_url }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/favicon/favicon-16x16.png?v=2' | relative_url }}">
+<link rel="manifest" href="{{ '/assets/favicon/site.webmanifest?v=2' | relative_url }}">
+<link rel="mask-icon" href="{{ '/assets/favicon/safari-pinned-tab.svg?v=2' | relative_url }}" color="#c6a000">
+<link rel="shortcut icon" href="{{ '/assets/favicon/favicon.ico?v=2' | relative_url }}">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="{{ '/assets/favicon/browserconfig.xml?v=2' | relative_url }}">
+<meta name="theme-color" content="#ffffff">
