Refactor: Replaced decoupled Liquid tag with clearer inline template

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,5 +1,6 @@
-
-{% tag_feeds_meta %}
+{% for tag in site.feed.tags.only %}
+<link type="application/atom+xml" rel="alternate" href="{{ site.feed.tags.path | append: tag | append: '.xml' | absolute_url }}" title="{{ tag }}: {{ site.title }}" />
+{%- endfor %}
 
 {% assign favicon_version = 3 %}
 <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicon/apple-touch-icon.png?v={{ favicon_version }}' | relative_url }}">
