--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,5 +1,6 @@
-
-{% tag_feeds_meta %}
+{% for tag in site.feed.tags.only %}
+<link type="application/atom+xml" rel="alternate" href="{{ site.feed.tags.path | append: tag | append: '.xml' | absolute_url }}" title="{{ tag }}: {{ site.title }}" />
+{%- endfor %}
 
 <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicon/apple-touch-icon.png?v=2' | relative_url }}">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/favicon/favicon-32x32.png?v=2' | relative_url }}">
