--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,5 +1,8 @@
-{% for tag in site.feed.tags.only %}
-<link type="application/atom+xml" rel="alternate" href="{{ site.feed.tags.path | append: tag | append: '.xml' | relative_url }}" title="{{ tag }}: {{ site.title }}" />
+{% for tag in site.feed.tags.only -%}
+	{%- capture path -%}
+		{{ site.feed.tags.path | append: tag | append: '.xml' }}
+	{%- endcapture %}
+<link type="application/atom+xml" rel="alternate" href="{{ path | relative_url }}" title="{{ tag }}: {{ site.title }}" />
 {%- endfor %}
 
 {% assign favicon_version = 3 %}
