--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -5,12 +5,12 @@
 <link type="application/atom+xml" rel="alternate" href="{{ path | relative_url }}" title="{{ tag }}: {{ site.title }}" />
 {%- endfor %}
 
-<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicon/apple-touch-icon.png?v=2' | relative_url }}">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/favicon/favicon-32x32.png?v=2' | relative_url }}">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/favicon/favicon-16x16.png?v=2' | relative_url }}">
-<link rel="manifest" href="{{ '/assets/favicon/site.webmanifest?v=2' | relative_url }}">
-<link rel="mask-icon" href="{{ '/assets/favicon/safari-pinned-tab.svg?v=2' | relative_url }}" color="#c6a000">
-<link rel="shortcut icon" href="{{ '/assets/favicon/favicon.ico?v=2' | relative_url }}">
+<link rel="apple-touch-icon" sizes="180x180" href="{% link /assets/favicon/apple-touch-icon.png %}?v=2">
+<link rel="icon" type="image/png" sizes="32x32" href="{% link /assets/favicon/favicon-32x32.png %}?v=2">
+<link rel="icon" type="image/png" sizes="16x16" href="{% link /assets/favicon/favicon-16x16.png %}?v=2">
+<link rel="manifest" href="{% link assets/favicon/site.webmanifest %}?v=2">
+<link rel="mask-icon" href="{% link /assets/favicon/safari-pinned-tab.svg %}?v=2" color="#c6a000">
+<link rel="shortcut icon" href="{% link /assets/favicon/favicon.ico %}?v=2">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="{{ '/assets/favicon/browserconfig.xml?v=2' | relative_url }}">
+<meta name="msapplication-config" content="{% link assets/favicon/browserconfig.xml %}?v=2">
 <meta name="theme-color" content="#ffffff">
