Refactor: Replaced duplicated "relative_url" usaged by using the "link" tag
These also ensure at build time that the files actually exist.

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -6,12 +6,12 @@
 {%- endfor %}
 
 {% assign favicon_version = 3 %}
-<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicon/apple-touch-icon.png?v={{ favicon_version }}' | relative_url }}">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/favicon/favicon-32x32.png?v={{ favicon_version }}' | relative_url }}">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/favicon/favicon-16x16.png?v={{ favicon_version }}' | relative_url }}">
-<link rel="manifest" href="{{ '/assets/favicon/site.webmanifest?v={{ favicon_version }}' | relative_url }}">
-<link rel="mask-icon" href="{{ '/assets/favicon/safari-pinned-tab.svg?v={{ favicon_version }}' | relative_url }}" color="#c6a000">
-<link rel="shortcut icon" href="{{ '/assets/favicon/favicon.ico?v={{ favicon_version }}' | relative_url }}">
+<link rel="apple-touch-icon" sizes="180x180" href="{% link /assets/favicon/apple-touch-icon.png %}?v={{ favicon_version }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{% link /assets/favicon/favicon-32x32.png %}?v={{ favicon_version }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% link /assets/favicon/favicon-16x16.png %}?v={{ favicon_version }}">
+<link rel="manifest" href="{% link assets/favicon/site.webmanifest %}?v={{ favicon_version }}">
+<link rel="mask-icon" href="{% link /assets/favicon/safari-pinned-tab.svg %}?v={{ favicon_version }}" color="#c6a000">
+<link rel="shortcut icon" href="{% link /assets/favicon/favicon.ico %}?v={{ favicon_version }}">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="{{ '/assets/favicon/browserconfig.xml?v={{ favicon_version }}' | relative_url }}">
+<meta name="msapplication-config" content="{% link assets/favicon/browserconfig.xml %}?v={{ favicon_version }}">
 <meta name="theme-color" content="#ffffff">
