--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,6 +1,5 @@
 {% for tag in site.feed.tags.only %}
     {% assign path = site.feed.tags.path | append: tag | append: '.xml' -%}
     <link type="application/atom+xml" rel="alternate" href="{{ path | absolute_url }}" title="{{ tag }}: {{ site.title }}" />
-{%- endfor -%}
-
-{% include favicon.html -%}
+{%- endfor %}
+{% include favicon.html %}
