--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -3,13 +3,4 @@
     <link type="application/atom+xml" rel="alternate" href="{{ path | absolute_url }}" title="{{ tag }}: {{ site.title }}" />
 {%- endfor -%}
 
-{% assign favicon_version = 3 %}
-<link rel="apple-touch-icon" sizes="180x180" href="{% link /assets/images/favicon/apple-touch-icon.png %}?v={{ favicon_version }}">
-<link rel="icon" type="image/png" sizes="32x32" href="{% link /assets/images/favicon/favicon-32x32.png %}?v={{ favicon_version }}">
-<link rel="icon" type="image/png" sizes="16x16" href="{% link /assets/images/favicon/favicon-16x16.png %}?v={{ favicon_version }}">
-<link rel="manifest" href="{% link assets/images/favicon/site.webmanifest %}?v={{ favicon_version }}">
-<link rel="mask-icon" href="{% link /assets/images/favicon/safari-pinned-tab.svg %}?v={{ favicon_version }}" color="#c6a000">
-<link rel="shortcut icon" href="{% link /assets/images/favicon/favicon.ico %}?v={{ favicon_version }}">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="{% link assets/images/favicon/browserconfig.xml %}?v={{ favicon_version }}">
-<meta name="theme-color" content="#ffffff">
+{% include favicon.html -%}
