--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -37,6 +37,14 @@ a:target ~ .spoiler-trigger {
     border-radius: 1px;
 }
 
+.source {
+    display: block;
+    margin-top: -($small-gap * 2);
+    @include relative-font-size(1);
+    color: $brand-color;
+    // color: hsl(210 85% 50%);
+}
+
 .contact-list {
     display: none;
 }
